--- a/public/scss/screen.scss
+++ b/public/scss/screen.scss
@@ -333,4 +333,19 @@
     width: 80vw;
     margin-left: -42vw;
   }
+
+
+
+  /*music player css*/
+  .musicInfo h2{
+    font-size: 1em;
+  }
+
+  .musicMiddle{
+    display: none;
+  }
+
+  .volumeSettings{
+    display: none;
+  }
 }
