--- a/public/scss/typography.scss
+++ b/public/scss/typography.scss
@@ -2,4 +2,5 @@
     /*Sets default font settings*/
     font-family: "Segoe UI", Arial, serif;
     font-size: 1em;
+    font-weight: 550; /* 400 is normal, 700 is bold*/
 }
